 . [FIX] RenderTexture: works in HiRes mode (issue #898)
 . [FIX] Director: Avoid re-scale initial issue (issue #899, issue #350)
 . [FIX] Director: convertToUI works as expected (issue #902)
 . [FIX] Director: renamed mainLoop -> drawScene
 . [FIX] Director: appended '_' to ivars (eg: FPSLabel -> FPSLabel_)

version 0.99.4-rc2 - 24-Jun-2010
 . [NEW] CCArray: Internally uses CCARRAY_FOREACH. Improved performance (issue #353)
 . [NEW] Templates: BaseSDK 4.0. Deploy OS Target: 3.0
 . [FIX] CocosDenshion: compiles with LLVM v1.5
 . [FIX] Removed artifacts from PageTurnTransition (issue #751)
 . [FIX] Templates: calls Director#purgeCachedData on memory warning
 . [FIX] Templates: sets CD_DEBUG=1 in debug configuration
 . [FIX] Texture2D: JPEG images are displayed correctly in iOS4 (issue #886)

version 0.99.4-rc - 22-Jun-2010
 . [NEW] Director: supports "setContentScaleFactor" (high-res support natively)
 . [FIX] Effects: Creates correct color buffer
 . [FIX] Director: Sets correctly portrait upside-down orientation
 . [FIX] Sprites: flipX/Y works with offsets (issue #732)
 . [FIX] Templates: Bundle Version is 1.0 (issue #871)

version 0.99.4-beta - 14-Jun-2010
 . [NEW] CDSoundEngine loadBufferFromData method added for loading custom buffer data.
 . [NEW] CDSoundEngine channel groups renamed source groups to make function clearer.
 . [NEW] CDSoundEngine source groups can be dynamically modified using defineSourceGroups.
 . [NEW] CDSoundSource new object oriented sound API
 . [NEW] CDSoundEngine added soundSourceForSound method to create CDSoundSource objects
 . [NEW] CDSoundEngine buffers are automatically increased as needed (no more CD_MAX_BUFFERS)
 . [NEW] CDPropertyModifier class for modifying properties such as pitch and gain over time
 . [NEW] CDXPropertyModifierAction class for modifying properties such as pitch and gain using cocos2d actions
 . [NEW] Convenience methods for fading volume of background music, sound effects and CDSoundSource objects