@@ -25,6 +25,7 @@ Barta, Markus (http://markus.barta.com)
 Brain Fever Music (http://www.brainfevermedia.com/)
 Bratton, Erich (http://bratton.com/)
 Braunstein, Roger
+Celeski, Sanjin
 Copsey, Ben (http://allseeing-i.com/)
 Da Silva, Vitor Almedia (http://myplaymobile.com/)
 Daley, Michael
@@ -49,6 +50,7 @@ Launching Pad Games (http://launchingpadgames.com/)
 Lazarevic, Dusan (http://www.4iphone4.me/)
 Loukeris, Ioannis (http://www.inomercy.com)
 McNamee, Thomas
+Meach, Gregory
 Menni, Philip (http://www.forestfolk.net/)
 Mission One, LLC (http://mission-one.jp/)
 Morrison, Tyler (http://www.haikusoftware.com)
