@@ -7,6 +7,7 @@ version 0.99.4-rc3 - 01-Jul-2010
  . [FIX] Director: convertToUI works as expected (issue #902)
  . [FIX] Director: renamed mainLoop -> drawScene
  . [FIX] Director: appended '_' to ivars (eg: FPSLabel -> FPSLabel_)
+ . [FIX] EAGLView: removed unused 'delegate_' ivar
 
 version 0.99.4-rc2 - 24-Jun-2010
  . [NEW] CCArray: Internally uses CCARRAY_FOREACH. Improved performance (issue #353)
